src/objects/Interface__c.object
<CustomObject>
    <description>Interface specification for each of the integrations between Salesforce and external systems</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Integration_Pattern__c</fullName>
        <label>Integration Pattern</label>
        <picklist>
            <picklistValues>
                <fullName>SFDC Outbound Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC Outbound WSDL callout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC Inbound Apex WSDL service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC Inbound Enterprise WSDL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC Data Loader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC Bulk API</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP Scheduled Batch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP Inbound WSDL</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Properties__c</fullName>
        <label>Properties</label>
        <picklist>
            <picklistValues>
                <fullName>Real-time Request-Reply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Async - fire and forget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid - Async with Async batch response</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <picklist>
            <picklistValues>
                <fullName>SFDC</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>iCRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mini-Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSSN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AvayaCTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SocialHub</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_System__c</fullName>
        <label>Target System</label>
        <picklist>
            <picklistValues>
                <fullName>SFDC</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>iCRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mini-Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSSN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AvayaCTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SocialHub</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Interface</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Interface Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interface</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>